# oxwc

./: .envrc  .gitignore  Cargo.toml  README.md  default.nix  flake.nix
resources/scripts/: run.sh
src/: action.rs  errors.rs  grabs.rs  input.rs  lib.rs  main.rs  output.rs  shell.rs  state.rs
src/backend/: udev.rs  winit.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  layer_shell.rs  mod.rs  xdg_shell.rs
src/layout/: mod.rs  tiling.rs
src/protocols/: mod.rs  wlr_screencopy.rs
src/workspace/: mod.rs
